--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Belajar Javascript</title>
 </head>
 <body>
-    
-    <script src="pengulangan/while.js"></script>
+
+    <!-- <script src="pengulangan/while.js"></script> -->
+    <script type="text/javascript" src="pengulangan/for.js"></script>
 </body>
 </html>
