--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
     <!-- <script src="pengulangan/while.js"></script> -->
-    <script type="text/javascript" src="pengulangan/for.js"></script>
+    <!-- <script type="text/javascript" src="pengulangan/for.js"></script> -->
+    <script type="text/javascript" src="pengkondisian/ifelse.js"></script>
 </body>
 </html>
