--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- <script src="pengulangan/while.js"></script> -->
     <!-- <script type="text/javascript" src="pengulangan/for.js"></script> -->
-    <script type="text/javascript" src="pengkondisian/ifelse.js"></script>
+    <!-- <script type="text/javascript" src="pengkondisian/ifelse.js"></script> -->
+    <script type="text/javascript" src="pengkondisian/switch.js"></script>
 </body>
 </html>
