--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="pengulangan/while.js"></script> -->
     <!-- <script type="text/javascript" src="pengulangan/for.js"></script> -->
     <!-- <script type="text/javascript" src="pengkondisian/ifelse.js"></script> -->
-    <script type="text/javascript" src="pengkondisian/switch.js"></script>
+    <!-- <script type="text/javascript" src="pengkondisian/switch.js"></script> -->
+    <script src="function/pertama.js"></script>
 </body>
 </html>
