--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <!-- <script type="text/javascript" src="pengulangan/for.js"></script> -->
     <!-- <script type="text/javascript" src="pengkondisian/ifelse.js"></script> -->
     <!-- <script type="text/javascript" src="pengkondisian/switch.js"></script> -->
-    <script src="function/kubus.js"></script>
+    <!-- <script src="function/kubus.js"></script> -->
     <!-- <script src="function/argumets.js"></script> -->
+    <script src="array/manipulasi.js"></script>
 </body>
 </html>
