--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- <script type="text/javascript" src="pengkondisian/switch.js"></script> -->
     <!-- <script src="function/kubus.js"></script> -->
     <!-- <script src="function/argumets.js"></script> -->
-    <script src="array/manipulasi.js"></script>
+    <!-- <script src="array/manipulasi.js"></script> -->
+    <script src="object/script.js"></script>
 </body>
 </html>
